# uamcli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  artifacts.json  changelog.rss  index.html  oranda.json  uamcli-installer.ps1.txt  uamcli-installer.sh.txt
.github/workflows/: web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.10/: index.html
changelog/v0.1.11/: index.html
changelog/v0.1.12/: index.html
changelog/v0.1.13/: index.html
changelog/v0.1.15/: index.html
changelog/v0.1.7/: index.html
presentations/: UCAM and Physna.key
public/: artifacts.json  changelog.rss  index.html
public/artifacts/: index.html
public/changelog/: index.html
public/changelog/v0.1.0/: index.html
public/changelog/v0.1.1/: index.html
public/changelog/v0.1.2/: index.html
public/changelog/v0.1.3/: index.html
public/changelog/v0.1.4/: index.html
src/: api.rs  cli.rs  client.rs  configuration.rs  lib.rs  main.rs  model.rs  security.rs
wix/: main.wxs
