[package]
name = "uamcli"
version = "0.1.0"
edition = "2021"
authors = ["Julian Chultarsky <jchultarsky@physna.com>"]
description = "Command Line Interface for the Unity Asset Manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = "4.4.11"
configuration = "0.7.2"
dirs = "5.0.1"
env = "0.0.0"
keyring = "2.1.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
strfmt = "0.2.4"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
