[package]
name = "uamcli"
version = "0.1.13"
edition = "2021"
authors = ["Julian Chultarsky <jchultarsky@physna.com>"]
description = "Command Line Interface for the Unity Asset Manager"
repository = "https://github.com/jchultarsky101/uamcli.git"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "9CCA4A12-F22B-42BC-8BEB-DB84C238A8C9"
path-guid = "FCFAB5BE-DE6F-4AD8-BEA4-9D3DE51B47C2"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = "4.4.11"
configuration = "0.7.2"
csv = "1.3.0"
dirs = "5.0.1"
futures = "0.3.30"
keyring = "2.1.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["json"] }
serde_yaml = "0.9.27"
strfmt = "0.2.4"
tempfile = "3.9.0"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
urlencoding = "2.1.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
